services/telemetry/home-exporters/daikin-prometheus-exporter/daikin-prometheus-exporter-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-exporters
  labels:
    app.kubernetes.io/name: daikin-prometheus-exporter
    app.kubernetes.io/managed-by: flux
